# ratatui-input-manager

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  release-plz.toml
.github/: dependabot.yaml
.github/workflows/: _check.yaml  _deny.yaml  _docs.yaml  _lint.yaml  _release.yaml  _release_pr.yaml  _test.yaml  ci.yaml  release.yaml  release_pr.yaml
derive/: CHANGELOG.md  Cargo.toml
derive/src/: lib.rs
examples/crossterm/: Cargo.toml
examples/crossterm/src/: main.rs
src/: lib.rs  widgets.rs
tests/: crossterm_test.rs  termion_test.rs  termwiz_test.rs  widget_test.rs
