[package]
name = "ratatui-input-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { workspace = true }
itertools = { version = "0.14.0", optional = true }
ratatui-core = { version = "0.1.0", default-features = false, optional = true }
ratatui-input-manager-derive = { path = "derive" }
ratatui-widgets = { version = "0.3.0", default-features = false, optional = true }

[features]
widgets = ["dep:itertools", "dep:ratatui-core", "dep:ratatui-widgets"]

[workspace]
members = [".", "derive"]
default-members = [".", "derive"]

[workspace.dependencies]
crossterm = "0.29.0"
