[package]
name = "ratatui-input-manager"
version = "0.1.0"
edition = "2024"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "ratatui-input-manager-derive/crossterm"]
widgets = ["dep:itertools", "dep:ratatui-core", "dep:ratatui-widgets"]
termion = ["dep:termion", "ratatui-input-manager-derive/termion"]

[dependencies]
crossterm = { workspace = true, optional = true }
itertools = { version = "0.14.0", optional = true }
ratatui-core = { version = "0.1.0", default-features = false, optional = true }
ratatui-input-manager-derive = { path = "derive", default-features = false }
ratatui-widgets = { version = "0.3.0", default-features = false, optional = true }
termion = { version = "4.0.6", optional = true }

[workspace]
members = [".", "derive"]
default-members = [".", "derive"]

[workspace.dependencies]
crossterm = "0.29.0"
