[package]
name = "ratatui-input-manager"
version = "0.3.0"
description = "A small utility crate providing a declarative approach to handling inputs in ratatui"
readme = "./README.md"
keywords = ["tui", "ratatui", "crossterm", "termion", "termwiz"]
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["crossterm", "widgets"]
crossterm = ["dep:crossterm", "ratatui-input-manager-derive/crossterm"]
widgets = ["dep:itertools", "dep:ratatui-core", "dep:ratatui-widgets"]
termion = ["dep:termion", "ratatui-input-manager-derive/termion"]
termwiz = ["dep:termwiz", "ratatui-input-manager-derive/termwiz"]

[dependencies]
crossterm = { workspace = true, optional = true }
itertools = { version = "0.14.0", optional = true }
ratatui-core = { version = "0.1.0", default-features = false, optional = true }
ratatui-input-manager-derive = { version = "0.3.0", path = "derive", default-features = false }
ratatui-widgets = { version = "0.3.0", default-features = false, optional = true }
termion = { version = "4.0.6", optional = true }
termwiz = { version = "0.23.3", optional = true }

[workspace]
members = [".", "derive", "examples/crossterm"]
default-members = [".", "derive"]

[workspace.dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
