[package]
name = "ratatui-input-manager-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
darling = "0.23.0"
itertools = "0.14.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
prettyplease = "0.2.37"
