[package]
name = "ratatui-input-manager-derive"
version = "0.2.0"
description = "macros for ratatui-input-manager"
readme = "../README.md"
keywords = ["tui", "ratatui", "crossterm", "termion", "termwiz"]
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
default = ["crossterm"]
crossterm = []
termion = []
termwiz = []

[dependencies]
proc-macro2 = "1.0.106"
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
darling = "0.23.0"
itertools = "0.14.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
prettyplease = "0.2.37"
